--- a/contactus.html
+++ b/contactus.html
@@ -25,6 +25,9 @@
             <input type="text" id="email">
             <p><label for="message">Leave us a message</label></p>
             <p><textarea name="message" id="message" cols="30" rows="10"></textarea></p>
+            <button>
+                Apply
+            </button>
 
         </form>
     </main>
